--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "express": "^4.21.2",
+    "framer-motion": "^12.4.2",
     "lucide-react": "^0.474.0",
     "mssql": "^11.0.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1"
   },
