--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@supabase/supabase-js": "^2.48.0",
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "eslint-plugin-react": "^7.37.4",
     "express": "^4.21.2",
     "mssql": "^11.0.1",
     "react": "^19.0.0",
@@ -46,7 +48,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint-plugin-react": "^7.37.4"
+  "resolutions": {
+    "eslint-plugin-react": "latest"
   }
 }
